--- a/todo/package.json
+++ b/todo/package.json
@@ -12,5 +12,8 @@
   "type": "module",
   "dependencies": {
     "inquirer": "^9.2.14"
+  },
+  "devDependencies": {
+    "@types/inquirer": "^9.0.7"
   }
 }
